8 задание
